--- a/css/less/forms.less
+++ b/css/less/forms.less
@@ -1,7 +1,206 @@
 /* ----------------------------------- *\
 			forms elements styles
 \* ----------------------------------- */
-
+.frm-main-country {
+    display: block;
+    position: relative;
+    .selector {
+        position: relative;
+        display: block;
+        .form-input.inp-large.inp-button {
+            padding-top: 8px;
+        }
+        &.active {
+            &~.country-options {
+                display: block;
+            }
+            .form-input.inp-button {
+                &:before {
+                    .t-rotate(180deg);
+                }
+            }
+        }
+    }
+    .country-options {
+        display: none;
+        animation: fadein ease 0.2s;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 20;
+    }
+    .country-search {
+        display: block;
+        position: relative;
+        width: 100%;
+        .form-input {
+            background-image: url(../img/icons/search.svg);
+            background-position: 20px center;
+            background-size: 24px auto;
+            background-repeat: no-repeat;
+            padding-left: 52px;
+            padding-right: 50px;
+        }
+        .cancel_button {
+            display: block;
+            border-radius: 0;
+            border: none;
+            padding: 0;
+            min-width: 0;
+            min-height: 0;
+            box-shadow: none;
+            opacity: 1;
+            height: 24px;
+            width: 24px;
+            background: url(../img/icons/clear.svg) center no-repeat;
+            background-size: 24px auto;
+            position: absolute;
+            z-index: 2;
+            top: 50%;
+            right: 16px;
+            margin-top: -12px;
+            transition: all ease 0.2s;
+        }
+    }
+    .selector-title {
+        height: 26px;
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        overflow: hidden;
+        z-index: 2;
+        pointer-events: none;
+        font-size: 11px;
+        line-height: 26px;
+        color: #575759;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        padding: 0 10px 0 20px;
+    }
+    .option {
+        display: block;
+        margin-top: 8px;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        border: 1px solid #DDDFE3;
+        border-radius: 12px;
+        padding: 12px 20px;
+        max-height: 276px;
+        background-color: #fff;
+        z-index: 30;
+        overflow-y: auto;
+        overflow-x: hidden;
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+        &::-webkit-scrollbar {
+            width: 0;
+            height: 0;
+        }
+    }
+    .country-option {
+        display: flex;
+        margin: 0 0 8px 0;
+        transition: all ease 0.2s;
+        align-items: center;
+        color: #000;
+        padding: 4px 8px;
+        background: transparent;
+        border: none;
+        box-shadow: none;
+        min-width: 0;
+        width: 100%;
+        height: auto;
+        min-height: 0;
+        white-space: normal;
+        font-size: 16px;
+        line-height: 1.4;
+        font-weight: 500;
+        position: relative;
+        overflow: hidden;
+        justify-content: flex-start;
+        &:hover, &.active {
+            background: #DDDFE3;
+            border-radius: 4px;
+            color: #000;
+        }
+        img {
+            display: block;
+            width: 48px;
+            flex-shrink: 0;
+            height: auto;
+            max-width: 48px;
+        }
+        .country-name {
+            display: block;
+            position: relative;
+            padding: 0 0 0 12px;
+        }
+    }
+}
+.frm-main-select {
+    position: relative;
+    .select-content-block {
+        border: 1px solid #DDDFE3;
+        border-radius: 12px;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        margin: 8px 0 0 0;
+        width: 100%;
+        display: none;
+        z-index: 20;
+        background-color: #fff;
+    }
+    .menu {
+        display: block;
+        position: relative;
+        margin: 0;
+        padding: 12px 20px;
+        max-height: 276px;
+        overflow-y: auto;
+        overflow-x: hidden;
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+        &::-webkit-scrollbar {
+            width: 0;
+            height: 0;
+        }
+        li {
+            margin: 0 0 8px 0;
+            padding: 0;
+            &:before {
+                display: none;
+            }
+        }
+    }
+    .select-button {
+        display: block;
+        padding: 8px;
+        font-size: 16px;
+        line-height: 1.4;
+        font-weight: 400;
+        color: #000;
+        border-radius: 4px;
+        transition: all ease 0.2s;
+        position: relative;
+        overflow: hidden;
+        &:hover, &.active {
+            background-color: #DDDFE3;
+            color: #000;
+        }
+    }
+    .btn-popup {
+        &.active {
+            
+        }
+    }
+}
 .frm-main-button {
     display: flex;
     .form-input, .btn {
@@ -47,6 +246,32 @@
     [placeholder]:-moz-placeholder {color: #B8B8B8;}
     [placeholder]::-moz-placeholder {color: #B8B8B8;}
     [placeholder]:-ms-input-placeholder {color: #B8B8B8;}
+}
+.frm-field-message {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    padding: 0 0 0 28px;
+    position: relative;
+    display: block;
+    &:before {
+        content: "";
+        display: block;
+        width: 24px;
+        height: 24px;
+        position: absolute;
+        background: url(../img/icons/info.svg) center no-repeat;
+        background-size: 100% auto;
+        top: 12px;
+        left: 12px;
+        margin: -12px 0 0 -12px;
+    }
+    &.ms-error {
+        color: #FB435B;
+        &:before {
+            background-image: url(../img/icons/error.svg);
+        }
+    }
 }
 .frm-row,
 .frm-field,
