--- a/css/less/inputs.less
+++ b/css/less/inputs.less
@@ -9,6 +9,9 @@
     font-size: 14px;
     font-weight: 500;
     background-color: #fff;
+    &.inp-error {
+        border-color: #FB435B !important;
+    }
     &.inp-button {
         width: 100%;
         text-align: left;
