--- a/css/less/inputs.less
+++ b/css/less/inputs.less
@@ -79,6 +79,9 @@
         border-radius: 1.2rem;
         min-height: 44px;
         border-color: #DDDFE3;
+        &:focus {
+            border-color: var(--clr-att);
+        }
     }
 }
 textarea.form-input {
