--- a/css/less/content.less
+++ b/css/less/content.less
@@ -1121,13 +1121,13 @@ body.popup-open {
     .item-wrap {
         padding: 0 1.6rem;
         margin-bottom: 3.2rem;
-        width: 53.2%;
+        width: 54%;
         &:nth-child(2n) {
-            width: 46.8%;
+            width: 46%;
         }
     }
     .inner-wrap {
-        max-width: 1200px;
+        //max-width: 1200px;
     }
 }
 .main-roadmap-tiles-box {
