--- a/css/less/items.less
+++ b/css/less/items.less
@@ -1251,7 +1251,7 @@
         }
     }
     table {
-        width: 527px;
+        width: 600px;
         margin: 0;
         thead {
             th, td {
@@ -2876,7 +2876,11 @@
         display: block;
         text-align: center;
         .tile-total-title {
-            padding: 15px 0 0 0;
+            padding: 4px 0 0 0;
+        }
+        .tile-total-value {
+            font-size: 64px;
+            line-height: 1;
         }
     }
     .item-tile-scheme {
@@ -3025,6 +3029,15 @@
     
     .item-tile-pitch-full {
         flex-direction: column;
+        &.photo-bottom {
+            padding-bottom: 0;
+            .tile-photo-wrap {
+                margin-right: -4.8rem;
+                margin-left: auto;
+                width: 45rem;
+                max-width: 90%;
+            }
+        }
         .tile-photo-wrap {
             width: 30rem;
             max-width: 100%;
@@ -3250,6 +3263,34 @@
         }
     }
     /* ------ */
+}
+@media (min-width: 640px) {
+    .item-tile-pitch-full {
+        &.photo-bottom {
+            padding-top: 7rem;
+            padding-bottom: 7rem;
+            min-height: 60rem;
+            align-items: flex-start;
+            overflow: hidden;
+            position: relative;
+            .tile-photo-wrap {
+                max-width: 44%;
+                padding: 0;
+                width: 45rem;
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                top: 0;
+            }
+            .tile-photo {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                margin: 0;padding: 0;
+            }
+        }
+    }
 }
 @media (min-width: 768px) {
     .item-tile-percent.tile-full {
