--- a/css/style.css
+++ b/css/style.css
@@ -5237,11 +5237,20 @@ body.popup-open {
   box-shadow: 3px 5px 24px rgba(45, 47, 64, 0.08);
   overflow: visible;
 }
+.popup-box.popup-form .btn-action-ico.ico-close-main,
+.popup-box.popup-form-succefull .btn-action-ico.ico-close-main {
+  top: 3.5rem;
+  right: 3.5rem;
+}
 .popup-box.popup-form .popup-title-wrap,
 .popup-box.popup-form-succefull .popup-title-wrap {
   text-align: center;
   padding-left: 40px;
   padding-right: 40px;
+}
+.popup-box.popup-form .popup-title-wrap .popup-title,
+.popup-box.popup-form-succefull .popup-title-wrap .popup-title {
+  letter-spacing: -0.02em;
 }
 .popup-box.popup-form .popup-content-wrap,
 .popup-box.popup-form-succefull .popup-content-wrap {
@@ -5309,7 +5318,7 @@ body.popup-open {
 }
 .popup-form-box .frm-row-submit {
   margin: 0 auto;
-  max-width: 432px;
+  max-width: 374px;
   padding-top: 8px;
 }
 .popup-form-box .frm-row-submit .frm-field {
@@ -5323,8 +5332,9 @@ body.popup-open {
   line-height: 1.4;
   color: var(--clr-title);
 }
-.popup-form-box .frm-row-submit .field-info a:not(:hover) {
-  color: inherit;
+.popup-form-box .frm-row-submit .field-info:last-child {
+  text-align: center;
+  padding-top: 0;
 }
 .popup-form-box .frm-row-submit .btn {
   width: 100%;
@@ -8288,10 +8298,15 @@ body.popup-open {
   }
 }
 @media (max-width: 479px) {
+  .popup-box.popup-form .btn-action-ico.ico-close-main,
+  .popup-box.popup-form-succefull .btn-action-ico.ico-close-main {
+    top: 10px;
+    right: 10px;
+  }
   .popup-box.popup-form .popup-title-wrap,
   .popup-box.popup-form-succefull .popup-title-wrap {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 0;
+    padding-right: 0;
   }
   .teams-tiles-box .item-wrap {
     width: 100%;
@@ -9060,7 +9075,7 @@ select::-ms-expand {
 }
 .frm-main-country .country-option:hover,
 .frm-main-country .country-option.active {
-  background: #DDDFE3;
+  background: #F0F2F6;
   border-radius: 4px;
   color: #000;
 }
@@ -9129,7 +9144,7 @@ select::-ms-expand {
 }
 .frm-main-select .select-button:hover,
 .frm-main-select .select-button.active {
-  background-color: #DDDFE3;
+  background-color: #F0F2F6;
   color: #000;
 }
 .frm-main-button {
@@ -9189,6 +9204,78 @@ select::-ms-expand {
 }
 .frm-main-search [placeholder]:-ms-input-placeholder {
   color: #B8B8B8;
+}
+.frm-field-panel {
+  display: -ms-flexbox;
+  display: flex;
+}
+.frm-field-panel .frm-field-select {
+  -ms-flex: 1;
+      flex: 1;
+  border-radius: 0;
+}
+.frm-field-panel .frm-field-select:not(:last-child) .lbl-field-title {
+  border-right: none;
+}
+.frm-field-panel .frm-field-select:first-child .lbl-field-title {
+  border-radius: 12px 0 0 12px;
+}
+.frm-field-panel .frm-field-select:last-child .lbl-field-title {
+  border-radius: 0 12px 12px 0;
+}
+.frm-field-select {
+  display: block;
+  position: relative;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  line-height: 1;
+}
+.frm-field-select input {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  z-index: -999;
+  pointer-events: none;
+  margin: 0;
+  padding: 0;
+}
+.frm-field-select input:checked ~ .lbl-field-title {
+  background-color: #F0F2F6;
+  border-color: #F0F2F6;
+  color: #1D1D1F;
+}
+.frm-field-select .lbl-field-title {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  position: relative;
+  overflow: hidden;
+  border-radius: 12px;
+  transition: all ease 0.2s;
+  border: 1px solid #dddfe3;
+  padding: 0 10px 0 1.9rem;
+  height: 5.6rem;
+  min-height: 44px;
+  color: #7D7E80;
+  cursor: pointer;
+}
+.frm-field-select .lbl-field-title:hover {
+  color: #1D1D1F;
+}
+.frm-field-select .lbl-title {
+  display: block;
+  width: 100%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  font-size: 16px;
+  line-height: 1.4;
+  color: inherit;
+  max-height: 2.8em;
+  position: relative;
+  overflow: hidden;
 }
 .frm-field-message {
   font-size: 16px;
@@ -9257,6 +9344,13 @@ select::-ms-expand {
   content: "";
   display: block;
   position: absolute;
+}
+@media (max-width: 1023px) {
+  .frm-field-select .lbl-title {
+    font-size: 14px;
+    line-height: 1.2;
+    max-height: 2.4em;
+  }
 }
 @media (max-width: 479px) {
   .frm-main-button {
