--- a/css/less/structura.less
+++ b/css/less/structura.less
@@ -111,7 +111,7 @@ html {
     transition: padding ease 0.2s;
 }
 .header+.main-menu-box {
-    border-top: none;
+    //border-top: none;
     margin-bottom: 0;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -388,11 +388,7 @@ html {
     color: var(--clr-title);
     background: rgba(255, 255, 255, 0.9);
     backdrop-filter: blur(16px);
-    &.header-logo {
-        .logo-wrap {
-            width: 134px;
-        }
-    }
+    
     .inner-wrap {
         transition: all ease 0.2s;
         padding-top: 20px;
@@ -424,6 +420,9 @@ html {
         &:first-child {
             padding-left: 0;
         }
+    }
+    .action-fixed {
+        display: none;
     }
     a {
         &:not(:hover) {
@@ -854,8 +853,15 @@ html {
     }
 }
 @media (min-width: 1024px) {
-    .wrap-dark {
-        
+    .main-menu-box.menu-top {
+        height: 110px;
+    }
+    .header {
+        &.header-sto {
+            .logo-wrap {
+                width: 134px;
+            }
+        }
     }
     .header-fixed {
         .header {
@@ -863,6 +869,93 @@ html {
                 min-height: 68px;
                 padding-top: 10px;
                 padding-bottom: 10px;
+            }
+        }
+    }
+    .menu-fixed {
+        .main-menu-box.menu-top {
+            .inner-wrap {
+                position: fixed;
+                top: 0;
+                left: 180px;
+                right: 280px;
+                z-index: 200;
+                height: 110px;
+                padding-top: 16px;
+                padding-bottom: 16px;
+                width: auto;
+                min-width: 0;
+                &:after, &:before {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    right: 0;
+                    width: 30px;
+                    z-index: 20;
+                    pointer-events: none;
+                    //background: linear-gradient(270.65deg, #FFFFFF 21.97%, rgba(255, 255, 255, 0) 99.41%);
+                }
+                &:before {
+                    left: 0;
+                    right: auto;
+                    //background: linear-gradient(270.65deg, rgba(255, 255, 255, 0) 0.51%, #FFFFFF 77.6%);
+                }
+            }
+            .menu {
+                justify-content: flex-start;
+                flex-wrap: nowrap;
+                width: auto;
+                min-width: inherit;
+                padding-left: var(--paddingContainer);
+                padding-right: var(--paddingContainer);
+                margin-left: calc(var(--paddingContainer) * -1);
+                margin-right: calc(var(--paddingContainer) * -1);
+                overflow-y: hidden;
+                overflow-x: auto;
+                scrollbar-width: none;
+                -ms-overflow-style: none;
+                &::-webkit-scrollbar {
+                    width: 0;
+                    height: 0;
+                }
+                li {
+                    //width: 100px;
+                }
+            }
+        }
+        .header {
+            &.header-sto {
+                .inner-wrap {
+                    min-height: 110px;
+                    justify-content: space-between;
+                }
+                .action-wrap, .popup-menu-wrap {
+                    display: none;
+                }
+                .action-fixed {
+                    display: block;
+                    .btn {
+                        height: 46px;
+                        border-radius: 12px;
+                        padding: 0 35px;
+                        font-size: 16px;
+                        font-weight: 500;
+                    }
+                }
+            }
+        }
+    }
+}
+@media (min-width: 1480px) {
+    .menu-fixed {
+        .main-menu-box.menu-top {
+            .inner-wrap {
+                width: 1020px;
+                left: 50%;
+                right: auto;
+                margin-left: -560px;
             }
         }
     }
