--- a/css/style.css
+++ b/css/style.css
@@ -575,7 +575,6 @@ body {
   transition: padding ease 0.2s;
 }
 .header + .main-menu-box {
-  border-top: none;
   margin-bottom: 0;
   padding-top: 15px;
   padding-bottom: 15px;
@@ -881,9 +880,6 @@ body {
   -webkit-backdrop-filter: blur(16px);
           backdrop-filter: blur(16px);
 }
-.header.header-logo .logo-wrap {
-  width: 134px;
-}
 .header .inner-wrap {
   transition: all ease 0.2s;
   padding-top: 20px;
@@ -926,6 +922,9 @@ body {
 }
 .header .action-wrap:first-child {
   padding-left: 0;
+}
+.header .action-fixed {
+  display: none;
 }
 .header a:not(:hover) {
   color: inherit;
@@ -1286,10 +1285,91 @@ body {
   }
 }
 @media (min-width: 1024px) {
+  .main-menu-box.menu-top {
+    height: 110px;
+  }
+  .header.header-sto .logo-wrap {
+    width: 134px;
+  }
   .header-fixed .header .inner-wrap {
     min-height: 68px;
     padding-top: 10px;
     padding-bottom: 10px;
+  }
+  .menu-fixed .main-menu-box.menu-top .inner-wrap {
+    position: fixed;
+    top: 0;
+    left: 180px;
+    right: 280px;
+    z-index: 200;
+    height: 110px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    width: auto;
+    min-width: 0;
+  }
+  .menu-fixed .main-menu-box.menu-top .inner-wrap:after,
+  .menu-fixed .main-menu-box.menu-top .inner-wrap:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 30px;
+    z-index: 20;
+    pointer-events: none;
+  }
+  .menu-fixed .main-menu-box.menu-top .inner-wrap:before {
+    left: 0;
+    right: auto;
+  }
+  .menu-fixed .main-menu-box.menu-top .menu {
+    -ms-flex-pack: start;
+        justify-content: flex-start;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    width: auto;
+    min-width: inherit;
+    padding-left: var(--paddingContainer);
+    padding-right: var(--paddingContainer);
+    margin-left: calc(var(--paddingContainer) * -1);
+    margin-right: calc(var(--paddingContainer) * -1);
+    overflow-y: hidden;
+    overflow-x: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+  .menu-fixed .main-menu-box.menu-top .menu::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+  .menu-fixed .header.header-sto .inner-wrap {
+    min-height: 110px;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+  }
+  .menu-fixed .header.header-sto .action-wrap,
+  .menu-fixed .header.header-sto .popup-menu-wrap {
+    display: none;
+  }
+  .menu-fixed .header.header-sto .action-fixed {
+    display: block;
+  }
+  .menu-fixed .header.header-sto .action-fixed .btn {
+    height: 46px;
+    border-radius: 12px;
+    padding: 0 35px;
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
+@media (min-width: 1480px) {
+  .menu-fixed .main-menu-box.menu-top .inner-wrap {
+    width: 1020px;
+    left: 50%;
+    right: auto;
+    margin-left: -560px;
   }
 }
 /* ----------------------------------- *\
